--- a/.github/update-features.yml
+++ b/.github/update-features.yml
@@ -28,12 +28,12 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Run ESLint
         id: lint
         run: |
-          npm run lint:check > lint-output.txt 2>&1 || true
+          pnpm run lint:check > lint-output.txt 2>&1 || true
           echo "### Lint Results" >> $GITHUB_STEP_SUMMARY
           if [ -s lint-output.txt ]; then
             echo '```' >> $GITHUB_STEP_SUMMARY
@@ -46,7 +46,7 @@ jobs:
       - name: Run Prettier Check
         id: format
         run: |
-          npm run format:check > format-output.txt 2>&1 || true
+          pnpm run format:check > format-output.txt 2>&1 || true
           echo "### Format Check Results" >> $GITHUB_STEP_SUMMARY
           if [ -s format-output.txt ]; then
             echo '```' >> $GITHUB_STEP_SUMMARY
@@ -59,7 +59,7 @@ jobs:
       - name: Build project
         id: build
         run: |
-          npm run build
+          pnpm run build
           echo "### Build Results" >> $GITHUB_STEP_SUMMARY
           echo "✅ Build completed successfully" >> $GITHUB_STEP_SUMMARY
 
