--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -17,23 +17,28 @@ jobs:
         with:
           fetch-depth: 2
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
+          cache: 'pnpm'
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Run ESLint
-        run: npm run lint
+        run: pnpm run lint
 
       - name: Run TypeScript type check
-        run: npm run type-check
+        run: pnpm run type-check
 
       - name: Build Next.js
-        run: npm run build
+        run: pnpm run build
 
       - name: Validate archive
         run: npx tsx src/scripts/validate-archive.ts
