--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -15,14 +15,19 @@ jobs:
         with:
           fetch-depth: 2
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
+          cache: 'pnpm'
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Upload images to S3
         run: npx tsx src/scripts/upload-to-s3.ts
