--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "lint": "eslint .",
     "type-check": "tsc --noEmit",
-    "commit": "tsx src/scripts/commit.ts"
+    "commit": "tsx src/scripts/commit.ts",
+    "postinstall": "node scripts/fix-lightningcss.js"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.709.0",
@@ -41,5 +42,8 @@
     "tsx": "^4.19.2",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.50.1"
+  },
+  "optionalDependencies": {
+    "lightningcss-linux-arm64-gnu": "1.30.2"
   }
 }
