--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tabler/icons-react": "3.26.0",
     "chalk": "^5.4.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "esbuild-register": "^3.6.0",
     "inquirer": "^12.3.1",
     "next": "^16.1.0",
