--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-check": "tsc --noEmit",
     "commit": "tsx src/scripts/commit.ts",
     "reset-draft": "tsx src/scripts/reset-draft.ts",
+    "reply-email": "tsx src/scripts/send-reply-email.ts",
     "postinstall": "node scripts/fix-lightningcss.js"
   },
   "dependencies": {
